examples/c/error-codes/violates-constraint/fatal/CV-CEA3-bad-static.output
CV-CEA3-bad-static.c:6:11: error: invalid operands to binary expression ('void' and 'int')
      f() + 1;
      ~~~ ^ ~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
